--- a/formulario.html
+++ b/formulario.html
@@ -9,18 +9,18 @@
         <form method="POST" action="">
             <div class="form-group">
                 <label for="nome">Nome</label>
-                <input type="text" name="nome" id="nome" class="form-control" placeholder="Digite o seu nome" required="">
+                <input type="text" name="nome" id="nome" class="form-control" placeholder="Digite o seu nome" required="" autofocus="" tabindex="1">
             </div>
 
             <div class="form-group">
                 <label for="email">E-mail</label>
-                <input type="email" name="email" id="email" class="form-control" placeholder="seu@email.com.br" required="">
+                <input type="email" name="email" id="email" class="form-control" placeholder="seu@email.com.br" required="" tabindex="2" readonly="">
             </div>
 
 
             <div class="form-group">
                 <label for="nascimento">Nascimento</label>
-                <input type="date" name="nascimento" id="nascimento" class="form-control" required="" min="1990-01-01" max="2017-12-31">
+                <input type="date" name="nascimento" id="nascimento" class="form-control" required="" min="1990-01-01" max="2017-12-31" disabled="">
             </div>
             
             <div class="form-group">
@@ -33,7 +33,7 @@
 
             <div class="form-group">
                 <label for="li">Li o contrato</label>
-                <input type="checkbox" name="li" id="li" required="" checked="">
+                <input type="checkbox" name="li" id="li" required="" checked="" tabindex="3">
             </div>
 
             <div class="form-group">
@@ -78,11 +78,59 @@
 
             <div class="form-group">
                 <label for="estados">Estados</label>
-                <select name="estados" id="estados">
+                <select name="estados" id="estados" multiple="" size="3">
                     <option value="SP">São Paulo</option>
                     <option value="SC" selected="">Santa Catarina</option>
                     <option value="PR">Paraná</option>                    
                 </select>
+            </div>
+
+            <div class="form-group">
+                <label for="estados">Estados</label>
+                <select name="estados" id="estados" multiple="" size="3">
+                    <optgroup label="Sudeste">
+                        <option value="SP">São Paulo</option>
+                        <option value="MG">Minas Gerais</option>
+                        <option value="RJ">Rio de Janeiro</option>
+                    </optgroup>
+                    <optgroup label="Sul">
+                        <option value="PR">Paraná</option>
+                        <option value="SC" selected="">Santa Catarina</option>
+                        <option value="RS">Rio Grande do Sul</option>
+                    </optgroup>
+                </select>
+            </div>
+
+            <input type="hidden" name="id" value="1">
+
+            <div class="form-group">
+                <label for="senha">Senha</label>
+                <input type="password" name="senha" id="senha" class="form-control">
+            </div>
+
+            <div class="form-group">
+                <label for="mes">Mês</label>
+                <input type="month" name="mes" id="mes" class="form-control">
+            </div>
+
+            <div class="form-group">
+                <label for="semana">Semana</label>
+                <input type="week" name="semana" id="semana" class="form-control">
+            </div>
+
+            <div class="form-group">
+                <label for="hora">Hora</label>
+                <input type="time" name="hora" id="hora" class="form-control">
+            </div>
+
+            <div class="form-group">
+                <input type="text" name="" list="navegadores">
+                <datalist id="navegadores">
+                    <option value="Chrome">
+                    <option value="Firefox">
+                    <option value="Safari">
+                    <option value="Edge">
+                </datalist>
             </div>
 
             <div>
